# search-and-learn

./: .env.example  .gitignore  debug_conversions.py  job.sh  mistakes.json  pyproject.toml  selection_v3.py  slurm_job.sh  test_canonical_debug.py
data-safe/probe_data/8xuxcdyy/: 11.jsonl  26.jsonl  43.jsonl  497.jsonl
experiments/: debug.py  diagnostic_run.py  expand.py  fusion.py  fusion_rerun.py  fusion_v2.py  gibbs.py  hello.py  particles.py  quantised_experiment.py  qwen_math.py  report.py  selection.py  util.py
experiments/search/: particles.py
figures/fusion_analysis/53vig20u__9qup1u07/: strategy_comparison.json
figures/fusion_analysis/5lvoti3i__0oe2xr1b/: delta_analysis.json  strategy_comparison.json
figures/fusion_analysis/multi_pair_average/: multi_pair_analysis.json
figures/fusion_sweeps/minimal/: 53vig20u__9qup1u07.json  77pyab58__0hermenf.json  77pyab58__8ff83v7m.json  gfw8x07r__8yyge5wj.json
figures/selection/: cumulative_lines_77pyab58.json  cumulative_lines_gfw8x07r_77pyab58_tqfyvf5w.json  cumulative_lines_tqfyvf5w.json  split_violins_gfw8x07r.json  split_violins_percentile_10pct_gfw8x07r.json  split_violins_tqfyvf5w.json
figures/selection/53vig20u/: counts.csv  summary.json
figures/selection/77pyab58/: summary.json
figures/selection/aggregated/: aggregated_summary.json  analysis_summary.json
figures/selection/gfw8x07r/: summary.json
figures/selection/tqfyvf5w/: summary.json
notes/: answer_comparison_failure.md  entropy.md  interesting_runs.md  plan.md
recipes/Llama-3.2-1B-Instruct/: best_of_n.yaml
recipes/qwen-math-16/: beam_search.yaml  best_of_n.yaml
recipes/qwen-math-4/: beam_search.yaml  best_of_n.yaml
recipes/qwen-math-8/: beam_search.yaml  best_of_n.yaml
res/: selection.txt  selection2.txt  ven.txt
scripts/: analyse_diagnostics.py  create_percentile_violin.py  create_selection_figures.py  dataset_investigation.py  dataset_mapping.py  deploy.py  export_combo_subset.py  figures.py  inference_overview.py  inference_visualiser.py  metric_overlap.py  probe_data.py  probe_visualiser.py  report.py  request_remote.sh  selection.py  selection_2.py  selection_v3.py  single_end2end.py  step_probe.py  submit_job.sh  sync.py  test.py  threshold_eval.py  watch_pbs.sh  watch_slurm.sh
scripts/fusion/: generate_fusion_data.py  quick_analysis.py
src/sal/: config.py  const.py  profiler.py  test_time_compute.py  test_time_compute_new.py
src/sal/evaluation/: evaluate.py  (+3 more)
src/sal_experiments/: __init__.py  selection.py
tests/sal/: test_parser.py
(+45 files in other folders)
